syntax = "proto3";

option java_package = "com.thoughtworks.go.protobufs.tasks";
option java_outer_classname = "Tasks";
option java_multiple_files = true;

message ExecProto {
    string workingDir = 1;
    string command = 2;
    repeated string args = 3;
}

message PipelineIdentifierProto {
    string pipelineName = 1;
    int64 pipelineCounter = 2;
}

message StageIdentifierProto {
    PipelineIdentifierProto pipelineIdentifier = 1;
    string stageName = 2;
    int64 stageCounter = 3;
}

message JobIdentifierProto {
    StageIdentifierProto stageIdentifier = 1;
    string jobName = 2;
}
